--- a/Terminal/bin/.gitignore
+++ b/Terminal/bin/.gitignore
@@ -1,1 +1,7 @@
-/socketClient.class
+/JPanelCompraTicket$1.class
+/JPanelCompraTicket$2.class
+/DateTimePicker$1.class
+/TerminalPrincipal$1.class
+/TerminalPrincipal.class
+/presentacion/
+/comunicacion/
